--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -239,7 +239,7 @@ template {
  */
 hr {
   /* line-height */
-  @include fallback('margin', calc(#{$leading * 1em} - 1px) 0 #{$leading * 1em}, #{$leading * 1em} 0);
+  @include fallback('margin', calc(#{$leading * 0.5em} - 0.5px) 0 #{$leading * 0.5em}, #{$leading * 0.5em} 0);
 
   clear: both;
 
@@ -251,12 +251,16 @@ hr {
 
   overflow: visible; /* 2 */
 
-  color: palette('gray');
+  color: palette('gray', '30%');
 
   border: 0;
-  border-top: 1px solid palette('gray');
+  border-top: 2px solid palette('gray', '30%');
 
   box-sizing: content-box; /* 1 */
+
+  @media screen and (min-width: breakpoint('desktop')) {
+    @include fallback('margin', calc(#{$leading * 1em} - 1px) 0 #{$leading * 1em}, #{$leading * 1em} 0);
+  }
 }
 
 /* MEDIA ELEMENTS
