--- a/assets/stylesheets/layout/_main.scss
+++ b/assets/stylesheets/layout/_main.scss
@@ -72,7 +72,16 @@ main,
 .info-page > section > .container {
   padding-top: to-em(32px);
   padding-bottom: to-em(32px);
+}
 
+.wrap-gap {
+  display: grid;
+
+  grid-template-rows: auto;
+
+  width: 100%;
+
+  row-gap: to-rem(32px);
 }
 
 .internal-page {
