--- a/layouts/authors/term.html
+++ b/layouts/authors/term.html
@@ -13,7 +13,7 @@
     <main role="main" id="conteudo" class="internal-page">
       <section class="container wrap-gap">
         <div class="rich-text">
-          <div class="author author--center author--gap-big">
+          <div class="author author--center column-gap--18">
             <div class="avatar avatar--big">
               <a href="/autores/{{ .Params.slug}}"><img src="{{ .Params.avatar }}" alt="{{ .Params.alt }}" /></a>
             </div>
