feat: add consent mode

--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -23,4 +23,6 @@
   {{ block "head/favicons" . }}{{ partial "head/favicons.html" . }}{{ end }}
   {{ block "head/seo" . }}{{ partial "head/seo.html" . }}{{ end }}
   {{ block "head/scripts-head" . }}{{ partial "head/scripts-head.html" . }}{{ end }}
+  <meta name="adopt-website-id" content="8f13af80-dde3-4a91-8da0-d116e22b46ee" />
+  <script src="//tag.goadopt.io/injector.js?website_code=8f13af80-dde3-4a91-8da0-d116e22b46ee" class="adopt-injector"></script>
 </head>
