feat: add cookies

--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -23,6 +23,5 @@
   {{ block "head/favicons" . }}{{ partial "head/favicons.html" . }}{{ end }}
   {{ block "head/seo" . }}{{ partial "head/seo.html" . }}{{ end }}
   {{ block "head/scripts-head" . }}{{ partial "head/scripts-head.html" . }}{{ end }}
-  <meta name="adopt-website-id" content="8f13af80-dde3-4a91-8da0-d116e22b46ee" />
-  <script src="//tag.goadopt.io/injector.js?website_code=8f13af80-dde3-4a91-8da0-d116e22b46ee" class="adopt-injector"></script>
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="8d237d43-abcf-4cb9-ba8b-04b02ba23256" data-blockingmode="auto" type="text/javascript"></script>
 </head>
