feat: add float whatsapp

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,9 @@
+<a class="whatsapp" href="https://api.whatsapp.com/send?phone=551141718901&text=Ol%C3%A1%2C%20tudo%20bem%3F%20Gostaria%20de%20tirar%20uma%20d%C3%BAvida" target="_blank" rel="noopener">
+  <img src="/uploads/images/logo-whatsapp.svg" alt="Entre em contato através do Whatsapp" />
+</a>
 <footer class="footer">
   <div class="container">
+
     <div class="footer__copyright">
       <p> YouBet! School - Todos os direitos reservados - 2021</p>
     </div>
