--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -64,7 +64,7 @@
                     <textarea id="message" name="message" required></textarea>
                   </div>
                   <div class="button-wrap">
-                    <button type="submit">{{ i18n "send" }}</button>
+                    <button type="submit" class="button-secondary--solid">{{ i18n "send" }}</button>
                   </div>
                 </div>
 
