--- a/layouts/contact/single.html
+++ b/layouts/contact/single.html
@@ -21,7 +21,7 @@
           <div class="rich-text text-align--center">
             <h2>{{.Title}}</h2>
             <p>{{.Content}}</p>
-            <a href="/" class="btn">{{ i18n "home" | title }}</a>
+            <a href="/" class="button">{{ i18n "home" | title }}</a>
           </div>
         </div>
   </div>
