--- a/assets/stylesheets/abstracts/_config.scss
+++ b/assets/stylesheets/abstracts/_config.scss
@@ -183,34 +183,26 @@ $palette: (
     'focus': rgb(0, 0, 0),
   ),
   'button': (
-    'base': rgb(247, 168, 0),
-    'focus': rgb(222, 151, 0),
-    'disabled': rgb(250, 203, 102),
-  ),
-  'button-inverted': (
-    'base': rgb(253, 229, 178),
-    'focus': rgb(250, 203, 102),
+    'base': rgba(247, 168, 0, 1),
+    'dark': rgba(222, 151, 0, 1),
+    'light': rgba(250, 203, 102, 1),
     'disabled': rgb(254, 246, 229),
   ),
   'button-secondary': (
-    'base': rgb(0, 79, 247),
-    'focus': rgb(0, 71, 222),
-    'disabled': rgb(102, 149, 250),
-  ),
-  'button-secondary-inverted': (
-    'base': rgb(178, 202, 253),
-    'focus': rgb(102, 149, 250),
-    'disabled': rgb(229, 237, 254),
+    'base': rgba(0, 79, 247, 1),
+    'dark': rgba(0, 71, 222, 1),
+    'light': rgba(102, 149, 250, 1),
+    'disabled': rgba(229, 237, 254, 1),
   ),
   'button-neutral': (
-    'base': rgb(51, 51, 51),
-    'focus': rgb(46, 46, 46),
-    'disabled': rgb(133, 133, 133),
+    'base': rgba(51, 51, 51, 1),
+    'dark': rgba(46, 46, 46, 1),
+    'light': rgba(255, 254, 252, 1),
+    'disabled': rgba(133, 133, 133, 1),
   ),
-  'button-neutral-inverted': (
-    'base': rgb(255, 254, 252),
-    'focus': rgb(255, 254, 252),
-    'disabled': rgb(194, 194, 194),
+  'transparent': (
+    'base': rgba(255, 255, 255, 0),
+    'white': rgba(255, 255, 255, 0.2),
   ),
   'disabled': (
     'foreground': hsl(0, 0%, 42%),
