feat: add textures mixin

--- a/assets/stylesheets/index.scss
+++ b/assets/stylesheets/index.scss
@@ -10,7 +10,7 @@
 @import '../../node_modules/modularscale-sass/stylesheets/modularscale';
 
 // 1. Configuration and helpers
-@import 'abstracts/constants', 'abstracts/font-stacks', 'abstracts/functions', 'abstracts/config', 'abstracts/mixins';
+@import 'abstracts/constants', 'abstracts/font-stacks', 'abstracts/functions', 'abstracts/config', 'abstracts/mixins', 'abstracts/textures-mixin';
 
 // 3. Base stuff
 @import 'base/base', 'base/fonts', 'base/typography', 'base/helpers';
